2006-08-01  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: uf-view and optimystic has been moved
	to archive.

2006-07-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtksourceview has been branched.

2006-07-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: According to discussion on gnome-i18n,
	ekiga will continue to use gnome-2-14 branch for GNOME 2.16.	

2006-07-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-panel has been branched.

2006-07-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-mount to extras.

2006-07-16  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: There is no more ggv module.

2006-07-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-menus has been branched.

2006-07-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added NetworkManager-pptp and
	NetworkManager-vpnc to extras.

2006-07-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added istanbul to extras.

2006-06-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added pitivi to extras.

2006-06-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gimmie to extras.

2006-06-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been
	branched for gnome-2-14.

2006-06-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-system-monitor has been
	branched for gnome-2-14.

2006-06-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk and at-spi have been
	branched for gnome-2-14.

2006-06-16  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: Bug-buddy silently branched gor gnome-2-14.

2006-06-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved alacarte, orca,
	gnome-power-manager, and tomboy to proposed.
