@@ -1055,6 +1055,7 @@
       </component>
     </version>
   </module>
+  <!-- gnome-app-install has been moved to archive
   <module name="gnome-app-install">
     <version release="HEAD">
       <component name="gnome-app-install" dir="gnome-app-install" group="extras">
@@ -1066,6 +1067,7 @@
       </component>
     </version>
   </module>
+  -->
   <module name="gnome-applets">
     <version release="gnome-2.14">
       <component name="gnome-applets" dir="gnome-applets" group="desktop">
@@ -2779,6 +2781,7 @@
       </component>
     </version>
   </module>
+  <!-- notifier has been moved to archive
   <module name="notifier">
     <version release="HEAD">
       <component name="notifier" dir="notifier" group="extras">
@@ -2790,6 +2793,7 @@
       </component>
     </version>
   </module>
+  -->
   <module name="ontv">
     <version release="HEAD">
       <component name="ontv" dir="ontv" group="extras">
@@ -3125,7 +3129,6 @@
       </component>
     </version>
   </module>
-  -->
   <module name="update-manager">
     <version release="HEAD">
       <component name="update-manager" dir="update-manager" group="extras">
@@ -3137,6 +3140,7 @@
       </component>
     </version>
   </module>
+  -->
   <module name="vino">
     <version release="gnome-2.14">
       <component name="vino" dir="vino" group="desktop">
