@@ -1,3 +1,8 @@
+2006-08-03  Funda Wang  <fundawang@linux.net.cn>
+
+	* translation-status.xml: gnome-app-install, nofier, update-manager
+	have been moved to archive.
+
 2006-08-01  Funda Wang  <fundawang@linux.net.cn>
 
 	* translation-status.xml: uf-view and optimystic has been moved
